[project]
name = "fastkde"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["REVISION"]}


[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "toml",
    "setuptools_scm>=4.1.2",
    "oldest-supported-numpy; python_version>='3.5'",
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fastkde/version.py"
